solve problem:storieswraper:margin-right

--- a/style/style.css
+++ b/style/style.css
@@ -156,7 +156,7 @@ header{
 .storieswraper{
     margin-top: 30px;
     gap: 25px;
-    margin-right: 20px;
+    margin-right: 40px;
 }
 
 .story-pic-background{
